# ndt

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.unix  README.md  bounding.c  bounding.h  camera.c  camera.h  common.mk  image.c  image.h  kd-tree.c  kd-tree.h  kmeans.c  kmeans.h  map.c  map.h  matrix.c  matrix.h  ndt.c  ndt_config.h  ndt_config.h.in  nelder-mead.c  nelder-mead.h  object.c  object.h  scene.c  scene.h  timing.c  timing.h  vectNd.c  vectNd.h  vectNd_inline.c  vectNd_inline.h
Scripts/: encodeDir.sh  frameDup.sh
aws/: README.md  example_job.sh
cmake/: FindYAML.cmake
objects/: CMakeLists.txt  Makefile  README.md  cluster.c  cylinder.c  facet.c  hcube.c  hcylinder.c  hdisk.c  hfacet.c  hplane.c  object.h  orthotope.c  sphere.c  stubs.c  subspace.c
scenes/: CMakeLists.txt  Makefile  balls.c  custom.c  empty.c  empty.yaml  hypercube-points.c  hypercube-reflect.c  hypercube.c  maze-cube.c  nelder-mead.c  random.c  rubiks-solver.c  yaml.c
scripts/: frameDup.sh
